--- a/T5_finetune.ipynb
+++ b/T5_finetune.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
     "    fp16=True,\n",
     "    max_steps=3000,\n",
     "    do_eval=False,\n",
-    "    resume_from_checkpoint=\"./t5-base-speech-gen/checkpoint-2000\"  # replace with your actual checkpoint\n",
+    "    resume_from_checkpoint=\"./t5-base-speech-gen/checkpoint-2000\"  \n",
     ")\n",
     "\n",
     "\n",
@@ -666,7 +666,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='1213' max='3000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1213/3000 5:07:18 < 7:33:28, 0.07 it/s, Epoch 0.00/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>250</td>\n",
+       "      <td>0.128700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>0.147500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>750</td>\n",
+       "      <td>0.149300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.140900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trainer.train()"
    ]
