generator using groq cloud api

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -2,19 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "48c5e110",
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
     "from groq import Groq\n",
-    "from IPython.display import display"
+    "import torch\n",
+    "from transformers import pipeline\n",
+    "import torchaudio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "id": "e1c916ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fc9ac5e6",
    "metadata": {},
    "outputs": [],
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ad8c60cb",
    "metadata": {},
    "outputs": [],
@@ -86,167 +97,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "461531b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_input = widgets.Text(value=\"climate change\", description=\"Topic:\")\n",
+    "import re\n",
+    "import os\n",
+    "\n",
+    "def sanitize_filename(text):\n",
+    "    # Replace spaces with underscores and remove special characters\n",
+    "    return re.sub(r'[^a-zA-Z0-9_]', '', text.replace(\" \", \"_\"))\n",
+    "\n",
+    "topic_input = widgets.Text(value=\"Recent Trends in AI\", description=\"Topic:\")\n",
     "emotion_dropdown = widgets.Dropdown(\n",
     "    options=[\"formal\", \"casual\", \"motivational\", \"persuasive\", \"instructional\", \"debate\"],\n",
-    "    value=\"motivational\",\n",
-    "    description=\"Emotion:\"\n",
+    "    value=\"instructional\", description=\"Emotion:\"\n",
     ")\n",
-    "duration_slider = widgets.IntSlider(value=5, min=1, max=30, step=1, description=\"Duration (min):\")\n",
+    "duration_slider = widgets.IntSlider(value=3, min=1, max=10, step=1, description=\"Duration (min):\")\n",
     "audience_dropdown = widgets.Dropdown(\n",
     "    options=[\"general\", \"experts\", \"children\", \"students\", \"executives\"],\n",
-    "    value=\"general\",\n",
-    "    description=\"Audience:\"\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "58160130",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1573a3b122134ed599ea89eee6988692",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='VIJAY as politician', description='Topic:')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d2a6d558264451e9037fbb6b7d03a93",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Emotion:', index=1, options=('formal', 'casual', 'motivational', 'persuasive', 'instruct…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14abaefcdf59437db778c09da3c26d0c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntSlider(value=30, description='Duration (min):', max=30, min=1)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fe1f44f805849d6a40d4de6dbd3333a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='Audience:', index=2, options=('general', 'experts', 'children', 'students', 'executives'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c4dc91976514dd4b11d670624429f3e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Generate Speech', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "036c7154e3f24b8094260918bff1f860",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# --- Display the Widgets ---\n",
+    "    value=\"students\", description=\"Audience:\"\n",
+    ")\n",
+    "\n",
     "display(topic_input, emotion_dropdown, duration_slider, audience_dropdown)\n",
     "\n",
-    "# --- Button to Generate Speech ---\n",
-    "generate_button = widgets.Button(description=\"Generate Speech\")\n",
+    "# 5. Button to trigger process\n",
+    "generate_button = widgets.Button(description=\"Generate & Speak\")\n",
     "output = widgets.Output()\n",
+    "\n",
     "def on_button_click(b):\n",
     "    with output:\n",
     "        print(\"Generating speech...\\n\")\n",
-    "        # Call the function to generate speech\n",
-    "        speech = generate_speech(topic_input.value, duration_slider.value, emotion_dropdown.value, audience_dropdown.value)\n",
-    "        print(speech)\n",
-    "        # Save the generated speech to a file\n",
-    "        with open(\"generated_speech.txt\", \"w\") as file:\n",
-    "            file.write(speech)\n",
-    "        \n",
-    "        print(\"Speech successfully generated and saved to 'generated_speech.txt'.\")\n",
+    "        speech_text = generate_speech(topic_input.value, duration_slider.value, emotion_dropdown.value, audience_dropdown.value)\n",
+    "        print(speech_text)\n",
+    "\n",
+    "        folder_path = \"speech\"\n",
+    "        if not os.path.exists(folder_path):\n",
+    "            os.makedirs(folder_path)\n",
+    "\n",
+    "        # Generate filename from topic\n",
+    "        topic_clean = sanitize_filename(topic_input.value)\n",
+    "        filename = f\"speech_{topic_clean}.txt\"\n",
+    "        file_path = os.path.join(folder_path, filename)\n",
+    "\n",
+    "        # Ensure uniqueness (e.g., if file already exists, add a counter)\n",
+    "        counter = 1\n",
+    "        base_filename = filename\n",
+    "        while os.path.exists(file_path):\n",
+    "            filename = f\"{base_filename[:-4]}_{counter}.txt\"\n",
+    "            file_path = os.path.join(folder_path, filename)\n",
+    "            counter += 1\n",
+    "\n",
+    "        # Save speech to uniquely named .txt file\n",
+    "        with open(file_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "            f.write(speech_text)\n",
+    "        print(f\"Speech saved as '{file_path}'\")\n",
+    "\n",
     "generate_button.on_click(on_button_click)\n",
     "display(generate_button, output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d3983c3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'speech' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mgenerated_speech.txt\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mw\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m         file.write(\u001b[43mspeech\u001b[49m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mSpeech successfully generated and saved to \u001b[39m\u001b[33m'\u001b[39m\u001b[33mgenerated_speech.txt\u001b[39m\u001b[33m'\u001b[39m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'speech' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "with open(\"generated_speech.txt\", \"w\") as file:\n",
-    "        file.write(speech)\n",
-    "\n",
-    "print(\"Speech successfully generated and saved to 'generated_speech.txt'.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "09182c3b",
+   "id": "9a64b272",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "t5speechenv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
