--- a/GEN_SPEECH.ipynb
+++ b/GEN_SPEECH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "cc1b5f54",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "16414a24",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a3880b2b",
    "metadata": {},
    "outputs": [],
@@ -122,11 +122,12 @@
     "            )\n",
     "            \n",
     "            # Load vocoder for better audio quality\n",
-    "            self.vocoder = pipeline(\n",
-    "                \"text-to-speech\",\n",
-    "                model=\"microsoft/speecht5_hifigan\",\n",
-    "                device=device\n",
+    "            self.tts_engine = pipeline(\n",
+    "            \"text-to-speech\", \n",
+    "            model=\"microsoft/speecht5_tts\", \n",
+    "            device=device\n",
     "            )\n",
+    "\n",
     "            \n",
     "            logger.info(f\"TTS engine initialized on {device}\")\n",
     "        except Exception as e:\n",
@@ -352,79 +353,67 @@
     "        return sentences\n",
     "    \n",
     "    def generate_speech_audio(self, text: str, voice: str = \"en_female_neutral\", \n",
-    "                             output_filename: Optional[str] = None) -> str:\n",
+    "                          output_filename: Optional[str] = None) -> str:\n",
     "        \"\"\"\n",
-    "        Generate audio for the speech text using the TTS engine.\n",
-    "        \n",
-    "        Args:\n",
-    "            text: The speech text.\n",
-    "            voice: Voice ID to use.\n",
-    "            output_filename: Optional custom filename for the audio.\n",
-    "            \n",
-    "        Returns:\n",
-    "            str: Path to the generated audio file.\n",
+    "    Generate audio for the speech text using the TTS engine.\n",
+    "\n",
+    "    Args:\n",
+    "        text: The speech text.\n",
+    "        voice: Voice ID to use (currently not applied directly).\n",
+    "        output_filename: Optional custom filename for the audio.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: Path to the generated audio file.\n",
     "        \"\"\"\n",
     "        if not self.tts_engine:\n",
     "            raise ValueError(\"TTS engine not available. Check logs for initialization errors.\")\n",
     "        \n",
     "        # Prepare text by cleaning and chunking\n",
     "        text_chunks = self.prepare_text_for_tts(text)\n",
-    "        \n",
+    "\n",
     "        # Generate a default filename if not provided\n",
     "        if not output_filename:\n",
     "            timestamp = int(time.time())\n",
     "            output_filename = f\"speech_audio_{timestamp}.wav\"\n",
-    "        \n",
+    "\n",
     "        output_path = os.path.join(self.audio_folder, output_filename)\n",
-    "        \n",
+    "\n",
     "        try:\n",
-    "            # Process in chunks to avoid TTS limits and create better pacing\n",
     "            combined_audio = []\n",
-    "            \n",
-    "            # Select voice parameters based on the requested voice\n",
+    "            sample_rate = None\n",
+    "\n",
     "            voice_info = self.TTS_VOICES.get(voice, self.TTS_VOICES[\"en_female_neutral\"])\n",
-    "            \n",
     "            logger.info(f\"Generating audio using {voice_info['description']}\")\n",
-    "            \n",
-    "            # Process text in manageable chunks\n",
+    "\n",
     "            for i, chunk in enumerate(text_chunks):\n",
-    "                if not chunk.strip():  # Skip empty chunks\n",
+    "                if not chunk.strip():\n",
     "                    continue\n",
-    "                    \n",
-    "                # Generate speech for this chunk\n",
-    "                speaker_embedding = None  # In a real implementation, this would be voice-specific\n",
-    "                \n",
-    "                speech = self.tts_engine(\n",
-    "                    text=chunk,\n",
-    "                    speaker_embeddings=speaker_embedding,\n",
-    "                    return_tensors=True\n",
-    "                )\n",
-    "                \n",
-    "                # Generate audio with the vocoder for better quality\n",
-    "                audio = self.vocoder(speech[\"generated_speech\"])\n",
-    "                \n",
-    "                # Add a small pause between chunks\n",
+    "\n",
+    "                # Generate TTS audio\n",
+    "                speech = self.tts_engine(chunk)\n",
+    "                audio = speech[\"audio\"]\n",
+    "                sample_rate = speech[\"sampling_rate\"]\n",
+    "\n",
+    "                # Add pause between chunks\n",
     "                if i < len(text_chunks) - 1:\n",
-    "                    # Add 0.5s silence\n",
-    "                    sample_rate = audio[\"sampling_rate\"]\n",
     "                    silence = torch.zeros(int(0.5 * sample_rate))\n",
-    "                    audio[\"audio\"] = torch.cat([audio[\"audio\"], silence])\n",
-    "                \n",
-    "                combined_audio.append(audio[\"audio\"])\n",
-    "            \n",
-    "            # Combine all audio chunks\n",
+    "                    audio = torch.cat([audio, silence])\n",
+    "\n",
+    "                combined_audio.append(audio)\n",
+    "\n",
+    "            # Merge all audio and save\n",
     "            full_audio = torch.cat(combined_audio)\n",
-    "            sample_rate = audio[\"sampling_rate\"]\n",
-    "            \n",
-    "            # Save the combined audio\n",
     "            torchaudio.save(output_path, full_audio.unsqueeze(0), sample_rate)\n",
-    "            \n",
+    "\n",
     "            logger.info(f\"Audio saved to {output_path}\")\n",
     "            return output_path\n",
-    "            \n",
+    "\n",
     "        except Exception as e:\n",
     "            logger.error(f\"Error generating audio: {str(e)}\")\n",
     "            raise\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n",
     "    def get_speech_history(self) -> List[Dict]:\n",
     "        \"\"\"\n",
@@ -452,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e2460500",
    "metadata": {},
    "outputs": [],
@@ -732,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "cd8fae2b",
    "metadata": {},
    "outputs": [],
@@ -764,36 +753,7 @@
    "execution_count": null,
    "id": "44a6417f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05ddd532ea7c4456a0972555dcbff808",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/2.06k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ee33835032d4c68885c0bd6612456e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/585M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "\n",
