--- a/generator.ipynb
+++ b/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "48c5e110",
    "metadata": {},
    "outputs": [],
@@ -17,15 +17,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e1c916ef",
+   "execution_count": 10,
+   "id": "0e5e1739",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyttsx3\n",
+    "\n",
+    "def speak_text(text):\n",
+    "    engine = pyttsx3.init()\n",
+    "    engine.setProperty('rate', 170)  # Moderate speed\n",
+    "    engine.setProperty('volume', 1.0)  # Max volume\n",
+    "\n",
+    "    # Choose a clearer voice (index may vary by OS)\n",
+    "    voices = engine.getProperty('voices')\n",
+    "    if len(voices) > 1:\n",
+    "        engine.setProperty('voice', voices[1].id)  # Female (or clearer) voice\n",
+    "    else:\n",
+    "        engine.setProperty('voice', voices[0].id)\n",
+    "\n",
+    "    engine.say(text)\n",
+    "    engine.runAndWait()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fc9ac5e6",
    "metadata": {},
    "outputs": [],
@@ -67,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ad8c60cb",
    "metadata": {},
    "outputs": [],
@@ -97,10 +114,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "461531b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "266483c348b04a478a8a4f0bf2bc0539",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='Recent Trends in AI', description='Topic:')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c998a7f182024617b00434a162f019fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Emotion:', index=4, options=('formal', 'casual', 'motivational', 'persuasive', 'instruct…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a608a78f0e8b4638977e689d49c97dc0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=3, description='Duration (min):', max=10, min=1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ead74566ca84d98b3efb0b61fc25008",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Audience:', index=3, options=('general', 'experts', 'children', 'students', 'executives'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0930fbb73d7a456b8bd01b36653cfdfb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Generate & Speak', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f22ef4e33533467784a5428b0a579e27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import re\n",
     "import os\n",
@@ -131,6 +233,9 @@
     "        print(\"Generating speech...\\n\")\n",
     "        speech_text = generate_speech(topic_input.value, duration_slider.value, emotion_dropdown.value, audience_dropdown.value)\n",
     "        print(speech_text)\n",
+    "        speak_text(speech_text)\n",
+    "        print(\"Speech spoken aloud!\")\n",
+    "\n",
     "\n",
     "        folder_path = \"speech\"\n",
     "        if not os.path.exists(folder_path):\n",
@@ -155,13 +260,13 @@
     "        print(f\"Speech saved as '{file_path}'\")\n",
     "\n",
     "generate_button.on_click(on_button_click)\n",
-    "display(generate_button, output)"
+    "display(generate_button, output)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a64b272",
+   "id": "c43fcd6b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -169,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
