--- a/generator.ipynb
+++ b/generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "48c5e110",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "0e5e1739",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "fc9ac5e6",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "ad8c60cb",
    "metadata": {},
    "outputs": [],
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "461531b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "266483c348b04a478a8a4f0bf2bc0539",
+       "model_id": "2686001d205148debc2932bea5fce36c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -135,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c998a7f182024617b00434a162f019fc",
+       "model_id": "85d260615b954fc6822f142776462321",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a608a78f0e8b4638977e689d49c97dc0",
+       "model_id": "2cbbdf0639f64dec970136226745ea6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ead74566ca84d98b3efb0b61fc25008",
+       "model_id": "0f0d3fb7f9c64bf6a90a4b663b8240cf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -177,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0930fbb73d7a456b8bd01b36653cfdfb",
+       "model_id": "1059521fcbd441168d476b3d8737a422",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f22ef4e33533467784a5428b0a579e27",
+       "model_id": "2deba77b2f744d24b472afa4cc431ebe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +274,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
